<resources>
    <string name="app_name">Reppy</string>
    <string name="numofReps">Enter the amount of reps you want to do!</string>
    <string name="shouldbeanumber">/20</string>
    <string name="shouldbeaname">Count The Reps</string>
    <string name="numReps">00</string>
    <string name="TOTALREPS">TOTAL REPS</string>
    <string name="TOTALSETS">TOTAL SETS:</string>
    <string name="TOTALTIMES">PAST TIMES:</string>
    <string name="PASTREPS">LAST # REPS:</string>
    <string name="reps">100</string>
</resources>