<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".STATS">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="408dp"
        android:layout_height="651dp"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderButton">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/miriam_libre_bold"
                android:gravity="center"
                android:text="Statistics"
                android:textSize="80sp" />


            <TextView
                android:id="@+id/labelTotalReps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:text="TOTAL REPS:"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/amountOfReps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:text="@string/reps"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="34sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/labelTotalSets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:text="TOTAL SETS:"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/amountOfSets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:text="10"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="34sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/labelTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:text="@string/TOTALTIMES"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/amountTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:text="1:20"
                android:textSize="55sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="34sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/labelRepChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:text="@string/PASTREPS"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/amountRepChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:text="20"
                android:textSize="55sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/leaderButton"
        android:layout_width="189sp"
        android:layout_height="47sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="LEADERBOARD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backMenuButton"
        android:layout_width="189sp"
        android:layout_height="47sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="BACK TO MENU"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>